Update chatbot configuration and enhance NLP processing for improved user interaction

--- a/config.json
+++ b/config.json
@@ -2,8 +2,8 @@
   "countryCode": "57",
   "welcomeMessage": "¡Hola! Bienvenido al servicio de la Universidad. ¿En qué podemos ayudarte hoy? 😺",
   "defaultResponse": "No entendí tu pregunta. Puedes consultar:\n- 'Cursos disponibles'\n- 'Horarios de clase'\n- 'Requisitos de admisión'",
-  "imageCaption": "¡Conoce nuestros programas académicos 2024!",
+  "imageCaption": "¡Conoce nuestros programas académicos 2025!",
   "welcomeImage": "assets/promo.png",
-  "usersToWelcome": ["573505003159@c.us"],
+  "usersToWelcome": ["573505003159@c.us", "573505427657@c.us",  "573115611485@c.us"],
   "similarityThreshold": 0.65
 }
