Update welcome messages and enhance inscription handling in NLP processor

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "countryCode": "57",
-  "welcomeMessage": "¡Hola! Bienvenido al servicio de la Universidad. ¿En qué podemos ayudarte hoy? 😺",
+  "welcomeMessage": "¡Hola! Bienvenido al servicio de NeuroWeb. ¿En qué podemos ayudarte hoy? 😺",
   "defaultResponse": "No entendí tu pregunta. Puedes consultar:\n- 'Cursos disponibles'\n- 'Horarios de clase'\n- 'Requisitos de admisión'",
   "imageCaption": "¡Conoce nuestros programas académicos 2025!",
   "welcomeImage": "assets/promo.png",
